@@ -1,7 +1,9 @@
 package com.edugility.objexj.engine;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import org.junit.Before;
 import org.junit.Test;
@@ -18,15 +20,20 @@ public class TestCaseNotNullMVELFilter extends BasicThreadScheduler<Character> {
 
   @Test(expected = CompileException.class)
   public void testBadMVEL() throws Throwable {
-    new MVELFilter<Character>("arglebargle + 1").accept(Character.valueOf('a'), null);
+    final Map<Object, Object> variables = new HashMap<Object, Object>(3);
+    new MVELFilter<Character>("arglebargle + 1").accept(Character.valueOf('a'), variables);
   }
   
   @Test
   public void testMVELFilter() {
-    final MVELFilter<Character> filter = new MVELFilter<Character>("this != null && charValue() == 'a'");
-    assertTrue(filter.accept(Character.valueOf('a'), null));
-    assertFalse(filter.accept(Character.valueOf('b'), null));
-    assertFalse(filter.accept((Character)null, null));
+    final MVELFilter<Character> filter = new MVELFilter<Character>("x = 'foo'; this != null && charValue() == 'a'");
+    final Map<Object, Object> variables = new HashMap<Object, Object>(3);
+    assertTrue(filter.accept(Character.valueOf('a'), variables));
+    assertTrue(variables.containsKey("x"));
+    variables.clear();    
+    assertFalse(filter.accept(Character.valueOf('b'), variables));
+    assertTrue(variables.isEmpty());
+    assertFalse(filter.accept((Character)null, variables));
   }
 
 }
